--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -17,11 +17,27 @@
 
 
 		 <!-- 画面右側の表示部分 -->
+
 		    <div id="itemList"></div>
 		    <div id="itemList2"></div>
 
-			</div>
-		</div>
+		    <div id="itemIcon1"></div>
+		     <div id="itemName" style="left: 800px; top: 125px;"><p>カーソル </p></div>
+		    <div id="itemIcon2"></div>
+		     <div id="itemName" style="left: 800px; top: 190px;"><p>BBA </p></div>
+		    <div id="itemIcon3"></div>
+		     <div id="itemName" style="left: 800px; top: 255px;"><p>農場 </p></div>
+		    <div id="itemIcon4"></div>
+		     <div id="itemName" style="left: 800px; top: 320px;"><p>鉱山 </p></div>
+		    <div id="itemIcon5"></div>
+		     <div id="itemName" style="left: 800px; top: 385px;"><p>工場 </p></div>
+		    <div id="itemIcon6"></div>
+		     <div id="itemName" style="left: 800px; top: 445px;"><p>銀行 </p></div>
+		    <div id="itemIcon7"></div>
+		     <div id="itemName" style="left: 800px; top: 510px;"><p>魔女の塔 </p></div>
+		    <div id="itemIcon8"></div>
+		     <div id="itemName" style="left: 800px; top: 575px;"><p>宇宙人 </p></div>
+
 
     </body>
 </html>
@@ -31,6 +47,14 @@
 document.getElementById('bigCookie').innerHTML = '<img src="/image/perfectCookie.png">';
 document.getElementById('itemList').innerHTML = '<img src="/image/storeTile.jpg">';
 document.getElementById('itemList2').innerHTML = '<img src="/image/storeTile.jpg">';
+document.getElementById('itemIcon1').innerHTML = '<img src="/image/item1.png">';
+document.getElementById('itemIcon2').innerHTML = '<img src="/image/item2.png">';
+document.getElementById('itemIcon3').innerHTML = '<img src="/image/item3.png">';
+document.getElementById('itemIcon4').innerHTML = '<img src="/image/item4.png">';
+document.getElementById('itemIcon5').innerHTML = '<img src="/image/item5.png">';
+document.getElementById('itemIcon6').innerHTML = '<img src="/image/item6.png">';
+document.getElementById('itemIcon7').innerHTML = '<img src="/image/item7.png">';
+document.getElementById('itemIcon8').innerHTML = '<img src="/image/item8.png">';
 </script>
 
 
