--- a/src/main/resources/static/css/cookieclickerstyle.css
+++ b/src/main/resources/static/css/cookieclickerstyle.css
@@ -6,28 +6,52 @@ body
 	font-size:13px;
 }
 
+html::-webkit-scrollbar
+{
+  display: none;
+}
 
+
+#slide1 {
+    max-width: 100%;
+    max-height: 100%;
+    height:100vh;
+}
+
+#slide2 {
+    max-width: 100%;
+    max-height: 100%;
+    height: 100vh;
+}
 
 
 #cookieCount
 {
-    font-size: 40px;
-	position:absolute;
-	left:-680px;
+    -webkit-text-stroke: 2px #000;
+    position:absolute;
+    font-size: 60px;
+	left:-980px;
 	top:15%;
 	width:100%;
 	text-align:center;
 	pointer-events: none;
 }
 
+
+
+
 #bigCookie
 {
 	position:absolute;
-	left:30px;
+	left:40px;
 	top:300px;
 	cursor:pointer;
 	border-radius:128px;
 }
+
+
+
+
 
 
 
@@ -40,10 +64,19 @@ body
 	pointer-events: none;
 }
 
+#itemCount {
+    -webkit-text-stroke: 1px #000;
+    position:absolute;
+	font-size: 170%;
+	font-weight: bolder;
+	pointer-events: none;
+}
+
 #itemList
 {
 	position:absolute;
 	left:700px;
+	z-index: 0;
 	top:128px;
 }
 
@@ -51,7 +84,32 @@ body
 {
 	position:absolute;
 	left:700px;
+	z-index: 0;
 	top:384px;
+}
+
+#bg
+{
+	position:absolute;
+	left:700px;
+	top:0px;
+	z-index: -1;
+	max-width: 100%;
+    max-height: 100%;
+    height:100vh;
+    width:100vh;
+
+}
+
+
+#itemIcon1
+{
+	position:absolute;
+	left:700px;
+	top:128px;
+	z-index: 1;
+	cursor:pointer;
+
 }
 
 
