--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,25 +1,43 @@
 <!doctype html>
 <html xmlns:th="http://www.thymeleaf.org">
-<script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
+<link href="css/slick-theme.css" rel="stylesheet" type="text/css">
+<link href="css/slick.css" rel="stylesheet" type="text/css">
 <link href="css/cookieclickerstyle.css" rel="stylesheet" type="text/css">
+<script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
+<script type="text/javascript" src="js/slick.min.js"></script>
     <head>
         <meta charset="UTF-8" />
         <title>ゲーム画面</title>
     </head>
     <body>
 
+<div class="no-scroll">
+     <!-- スライド -->
+    <ul class="slider">
+    <div id="slide1"></div>
+    <div id="slide2"></div>
+   </ul>
+
         <!-- 画面左側の表示部分 -->
             <div id="cookieCount"></div>
 			<div class="cookieAnchor">
 		    <div id="bigCookie"></div>
-			</div>
-		</div>
+		    <div id="panel" style="position:absolute;left: 32px; top: 0px;"></div>
+		    <div id="panel2" style="position:absolute;left: 550px; top: 0px;"></div>
+            </div>
+
+
 
 
 		 <!-- 画面右側の表示部分 -->
+		 <div id="panel3" style="position:absolute;left: 684px; top: 0px;"></div>
+		 <div id="panel4" style="position:absolute;left: 1000px; top: 0px; "></div>
+
+
 
 		    <div id="itemList"></div>
 		    <div id="itemList2"></div>
+		    <div id="bg"></div>
 
 		    <div id="itemIcon1"></div>
 		     <div id="itemName" style="left: 800px; top: 125px;"><p>カーソル </p></div>
@@ -37,7 +55,7 @@
 		     <div id="itemName" style="left: 800px; top: 510px;"><p>魔女の塔 </p></div>
 		    <div id="itemIcon8"></div>
 		     <div id="itemName" style="left: 800px; top: 575px;"><p>宇宙人 </p></div>
-
+</div>
 
     </body>
 </html>
@@ -55,8 +73,46 @@ document.getElementById('itemIcon5').innerHTML = '<img src="/image/item5.png">';
 document.getElementById('itemIcon6').innerHTML = '<img src="/image/item6.png">';
 document.getElementById('itemIcon7').innerHTML = '<img src="/image/item7.png">';
 document.getElementById('itemIcon8').innerHTML = '<img src="/image/item8.png">';
+document.getElementById('slide1').innerHTML = '<img src="/image/cookieShower2.png">';
+document.getElementById('slide2').innerHTML = '<img src="/image/cookieShower2.png">';
+document.getElementById('panel').innerHTML = '<img src="/image/panelVertical1.png">';
+document.getElementById('panel2').innerHTML = '<img src="/image/panelVertical1.png">';
+document.getElementById('panel3').innerHTML = '<img src="/image/panelVertical1.png">';
+document.getElementById('panel4').innerHTML = '<img src="/image/panelVertical1.png">';
+document.getElementById('bg').innerHTML = '<img src="/image/bg.png">';
 </script>
 
+<!-- クッキー背景ループ -->
+<script type="text/javascript">
+$('.slider').slick({
+	  arrows: false,
+	  autoplay: true,
+	  infinite: true,
+	  autoplaySpeed: 0,
+	  speed: 20000,
+	  swipe: false,
+	  vertical: true,
+	  cssEase: 'linear',
+	  pauseOnFocus: false,
+	  pauseOnHover: false,
+	  pauseOnDotsHover: false,
+
+
+});
+</script>
+
+<!-- スクロールロック -->
+<script type="text/javascript">
+$(function(){
+  if($(".no-scroll").length) {
+    $(window).on('wheel',function(e){
+      e.preventDefault();
+    });
+  } else {
+    $(window).off('wheel');
+  }
+});
+</script>
 
 <!-- クッキー数表示 -->
 <script type="text/javascript">
