--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,50 +11,49 @@
     </head>
     <body>
 
-<div class="no-scroll">
+<div class="no_scroll">
      <!-- スライド -->
     <ul class="slider">
-    <div id="slide1"></div>
-    <div id="slide2"></div>
+    <div id="slide_1"></div>
+    <div id="slide_2"></div>
    </ul>
 
         <!-- 画面左側の表示部分 -->
-            <div id="cookieCount"></div>
-			<div class="cookieAnchor">
-		    <div id="bigCookie"></div>
+            <div id="cookie_count"></div>
+		    <div id="big_cookie"></div>
 		    <div id="panel" style="position:absolute;left: 32px; top: 0px;"></div>
-		    <div id="panel2" style="position:absolute;left: 550px; top: 0px;"></div>
-            </div>
+		    <div id="panel_2" style="position:absolute;left: 550px; top: 0px;"></div>
+
 
 
 
 
 		 <!-- 画面右側の表示部分 -->
-		 <div id="panel3" style="position:absolute;left: 684px; top: 0px;"></div>
-		 <div id="panel4" style="position:absolute;left: 1000px; top: 0px; "></div>
+		 <div id="panel_3" style="position:absolute;left: 684px; top: 0px;"></div>
+		 <div id="panel_4" style="position:absolute;left: 1000px; top: 0px; "></div>
 
 
 
-		    <div id="itemList"></div>
-		    <div id="itemList2"></div>
+		    <div id="item_list"></div>
+		    <div id="item_list_2"></div>
 		    <div id="bg"></div>
 
-		    <div id="itemIcon1"></div>
-		     <div id="itemName" style="left: 800px; top: 125px;"><p>カーソル </p></div>
-		    <div id="itemIcon2"></div>
-		     <div id="itemName" style="left: 800px; top: 190px;"><p>BBA </p></div>
-		    <div id="itemIcon3"></div>
-		     <div id="itemName" style="left: 800px; top: 255px;"><p>農場 </p></div>
-		    <div id="itemIcon4"></div>
-		     <div id="itemName" style="left: 800px; top: 320px;"><p>鉱山 </p></div>
-		    <div id="itemIcon5"></div>
-		     <div id="itemName" style="left: 800px; top: 385px;"><p>工場 </p></div>
-		    <div id="itemIcon6"></div>
-		     <div id="itemName" style="left: 800px; top: 445px;"><p>銀行 </p></div>
-		    <div id="itemIcon7"></div>
-		     <div id="itemName" style="left: 800px; top: 510px;"><p>魔女の塔 </p></div>
-		    <div id="itemIcon8"></div>
-		     <div id="itemName" style="left: 800px; top: 575px;"><p>宇宙人 </p></div>
+		    <div id="item_icon_1"></div>
+		     <div id="item_name" style="left: 800px; top: 125px;"><p>カーソル </p></div>
+		    <div id="item_icon_2"></div>
+		     <div id="item_name" style="left: 800px; top: 190px;"><p>BBA </p></div>
+		    <div id="item_icon_3"></div>
+		     <div id="item_name" style="left: 800px; top: 255px;"><p>農場 </p></div>
+		    <div id="item_icon_4"></div>
+		     <div id="item_name" style="left: 800px; top: 320px;"><p>鉱山 </p></div>
+		    <div id="item_icon_5"></div>
+		     <div id="item_name" style="left: 800px; top: 385px;"><p>工場 </p></div>
+		    <div id="item_icon_6"></div>
+		     <div id="item_name" style="left: 800px; top: 445px;"><p>銀行 </p></div>
+		    <div id="item_icon_7"></div>
+		     <div id="item_name" style="left: 800px; top: 510px;"><p>魔女の塔 </p></div>
+		    <div id="item_icon_8"></div>
+		     <div id="item_name" style="left: 800px; top: 575px;"><p>宇宙人 </p></div>
 </div>
 
     </body>
@@ -62,23 +61,23 @@
 
 <!-- 画像読み込み -->
 <script type="text/javascript">
-document.getElementById('bigCookie').innerHTML = '<img src="/image/perfectCookie.png">';
-document.getElementById('itemList').innerHTML = '<img src="/image/storeTile.jpg">';
-document.getElementById('itemList2').innerHTML = '<img src="/image/storeTile.jpg">';
-document.getElementById('itemIcon1').innerHTML = '<img src="/image/item1.png">';
-document.getElementById('itemIcon2').innerHTML = '<img src="/image/item2.png">';
-document.getElementById('itemIcon3').innerHTML = '<img src="/image/item3.png">';
-document.getElementById('itemIcon4').innerHTML = '<img src="/image/item4.png">';
-document.getElementById('itemIcon5').innerHTML = '<img src="/image/item5.png">';
-document.getElementById('itemIcon6').innerHTML = '<img src="/image/item6.png">';
-document.getElementById('itemIcon7').innerHTML = '<img src="/image/item7.png">';
-document.getElementById('itemIcon8').innerHTML = '<img src="/image/item8.png">';
-document.getElementById('slide1').innerHTML = '<img src="/image/cookieShower2.png">';
-document.getElementById('slide2').innerHTML = '<img src="/image/cookieShower2.png">';
+document.getElementById('big_cookie').innerHTML = '<img src="/image/perfectCookie.png">';
+document.getElementById('item_list').innerHTML = '<img src="/image/storeTile.jpg">';
+document.getElementById('item_list_2').innerHTML = '<img src="/image/storeTile.jpg">';
+document.getElementById('item_icon_1').innerHTML = '<img src="/image/item1.png">';
+document.getElementById('item_icon_2').innerHTML = '<img src="/image/item2.png">';
+document.getElementById('item_icon_3').innerHTML = '<img src="/image/item3.png">';
+document.getElementById('item_icon_4').innerHTML = '<img src="/image/item4.png">';
+document.getElementById('item_icon_5').innerHTML = '<img src="/image/item5.png">';
+document.getElementById('item_icon_6').innerHTML = '<img src="/image/item6.png">';
+document.getElementById('item_icon_7').innerHTML = '<img src="/image/item7.png">';
+document.getElementById('item_icon_8').innerHTML = '<img src="/image/item8.png">';
+document.getElementById('slide_1').innerHTML = '<img src="/image/cookieShower2.png">';
+document.getElementById('slide_2').innerHTML = '<img src="/image/cookieShower2.png">';
 document.getElementById('panel').innerHTML = '<img src="/image/panelVertical1.png">';
-document.getElementById('panel2').innerHTML = '<img src="/image/panelVertical1.png">';
-document.getElementById('panel3').innerHTML = '<img src="/image/panelVertical1.png">';
-document.getElementById('panel4').innerHTML = '<img src="/image/panelVertical1.png">';
+document.getElementById('panel_2').innerHTML = '<img src="/image/panelVertical1.png">';
+document.getElementById('panel_3').innerHTML = '<img src="/image/panelVertical1.png">';
+document.getElementById('panel_4').innerHTML = '<img src="/image/panelVertical1.png">';
 document.getElementById('bg').innerHTML = '<img src="/image/bg.png">';
 </script>
 
@@ -104,7 +103,7 @@ $('.slider').slick({
 <!-- スクロールロック -->
 <script type="text/javascript">
 $(function(){
-  if($(".no-scroll").length) {
+  if($(".no_scroll").length) {
     $(window).on('wheel',function(e){
       e.preventDefault();
     });
@@ -118,14 +117,14 @@ $(function(){
 <script type="text/javascript">
 
 var count = 1000;
-$("#bigCookie").click(function() {
-    document.getElementById( "cookieCount" ).innerHTML = ++count;
+$("#big_cookie").click(function() {
+    document.getElementById( "cookie_count" ).innerHTML = ++count;
 });
 
-function countUp(){
-	document.getElementById( "cookieCount" ).innerHTML = ++count;
+function count_up(){
+	document.getElementById( "cookie_count" ).innerHTML = ++count;
 }
-setInterval('countUp()',1000);
+setInterval('count_up()',1000);
 
 
 
